--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* Isso ajuda a evitar overflows com padding/border */
+}
+
 content {
     padding-bottom: 50%;
 }
@@ -66,7 +72,7 @@ content {
 }
 
 .content_1 {
-    background-image: url(../img/background-marketing-transp.PNG);
+    background-image: url("img/background-marketing-transp.PNG");
     width: 100%;
     min-height: auto; /* isso não tem efeito, explico abaixo */
     padding: 1rem 0 2rem 0; /* top | right | bottom | left */
